// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imports defined via compilerOptions.paths import 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
// file: file1.ts
import { someNumber } from '@transpileCodeblocksTest';
const n: number = someNumber;


// file: file2.ts
import { someNumber } from '@test/transpileCodeblocks.test';
const n: number = someNumber;
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
// file: file1.ts
import { someNumber } from '@transpileCodeblocksTest';
const n = someNumber;


// file: file2.ts
import { someNumber } from '@test/transpileCodeblocks.test';
const n = someNumber;
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`supports hyphens & periods in filenames 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
import { testFn } from './file-one.stuff';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
import { testFn } from './file-one.stuff';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`supports tsx snippets 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`tsx
import React from 'react';
export function App() {
  const [counter, setCounter] = React.useState<number>(0);
  return (
    <div>
      <button onClick={() => setCounter((prev) => prev + 1)}>
        Increment counter ({counter})
      </button>
    </div>
  );
}
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
import React from 'react';
export function App() {
  const [counter, setCounter] = React.useState(0);
  return (
    <div>
      <button onClick={() => setCounter((prev) => prev + 1)}>
        Increment counter ({counter})
      </button>
    </div>
  );
}
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`takes "noEmit" files into account for compiling, but does not output them: file1.ts should be missing from this snapshot 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
import { testFn } from './file1';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
import { testFn } from './file1';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`transpiles codeblocks 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
function testFn(arg1: string) {
  return arg1;
}
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
function testFn(arg1) {
  return arg1;
}
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`transpiles codeblocks with multiple file definitions 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
// file: file1.ts
export function testFn(arg1: string) {
  return arg1;
}


// file: file2.ts
import { testFn } from './file1';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
// file: file1.ts
export function testFn(arg1) {
  return arg1;
}


// file: file2.ts
import { testFn } from './file1';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`transpiles jsx 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
import React from 'react';

console.log(<div>asd</div>);
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
import React from 'react';

console.log(<div>asd</div>);
\`\`\`

        </TabItem>
    </Tabs>
`;
